# NanaRecorder

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  ScreenCapture.sln  auto_commit.bat
3rd/ffmpeg/FFmpeg-5.1/x64/lib/: avfilter.lib  avformat.lib  avutil.lib  swresample.lib
NanaRecorder/: .clang-format  AudioCapture.cpp  AudioCapture.h  AudioEncoder.cpp  AudioEncoder.h  AudioFrameQueue.cpp  AudioFrameQueue.h  CMakeLists.txt  FFmpegHeader.h  FFmpegHelper.cpp  FFmpegHelper.h  FileOutputer.cpp  FileOutputer.h  NanaRecorder.cpp  NanaRecorder.h  NanaRecorder.qrc  NanaRecorder.rc  NanaRecorder.ui  NanaRecorder.vcxproj  NanaRecorder.vcxproj.filters  RecordConfig.h  Recorder.cpp  Recorder.h  VideoCapture.cpp  VideoCapture.h  VideoEncoder.cpp  VideoEncoder.h  VideoFrameQueue.cpp  VideoFrameQueue.h  cpp.hint  main.cpp  mux.cpp  mux.h
NanaRecorder/model/: AppConfig.cpp  AppConfig.h  AppData.cpp  AppData.h  UserConfig.cpp  UserConfig.h  UserDatabase.cpp  UserDatabase.h
RecordCore/: CMakeLists.txt  RecordCore.vcxproj  RecordCore.vcxproj.filters
RecordCore/3rd/ffmpeg/FFmpeg-5.1/x64/: README.txt
RecordCore/3rd/ffmpeg/FFmpeg-5.1/x64/lib/: avcodec.lib  avdevice.lib  postproc.lib  swscale.lib
RecordCore/3rd/ffmpeg/FFmpeg-n5.1/x86/include/libavutil/: ffversion.h
RecordCore/3rd/ffmpeg/FFmpeg-n5.1/x86/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
RecordCore/common/: timer.h
RecordCore/common/setting/: CSetting.h
RecordCore/include/: IRecorder.h  Recorder.h
RecordCore/lib/: RecordCore.lib
RecordCore/src/: AmixFilter.cpp  AmixFilter.h  AudioCapture.cpp  AudioCapture.h  AudioEncoder.cpp  AudioEncoder.h  AudioFrameQueue.cpp  AudioFrameQueue.h  FFmpegHeader.h  FFmpegHelper.cpp  FFmpegHelper.h  FileOutputer.cpp  FileOutputer.h  RecordConfig.h  Recorder.cpp  Recorder.h  ResampleFilter.cpp  ResampleFilter.h  VideoCapture.cpp  VideoCapture.h  VideoEncoder.cpp  VideoEncoder.h  VideoFrameQueue.cpp  VideoFrameQueue.h  filter.cpp  filter.h  mux.cpp  mux.h  singleton.h
ScreenCapture/: .clang-format  README.md  ScreenCapture.ui  ScreenCapture.vcxproj  ScreenCapture.vcxproj.filters  ScreenCatureDemo.cpp  ScreenRecordImpl.cpp  ScreenRecordImpl.h  ScreenRecordTest.cpp  ScreenRecordTest.h  SoundRecordImpl.cpp  SoundRecordImpl.h  SoundRecordTest.cpp  SoundRecordTest.h  main.cpp  muxing.c  resampling_audio.c  transcoding.c
common/: timer.h
common/dump/: dump.cpp  dump.h
common/log/: log.h
common/setting/: CSetting.cpp
common/util/: util.cpp  util.h
doc/: ffmpeg_build.md
res/: NanaRecorder.qrc
test/: FreeBug.cpp  FreeBug.h  main.cpp  test.vcxproj  test.vcxproj.filters
